--- a/mesh/Cargo.toml
+++ b/mesh/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mesh-server"
+name = "mesh-fs"
 version = "0.1.0"
 authors = ["kt"]
 edition = "2018"
@@ -13,3 +13,4 @@ pretty_env_logger = "0.3"
 sled = "0.34.6"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
+yaml-rust = "0.4"
