--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "lldb",
       "request": "launch",
       "name": "Debug",
-      "program": "${workspaceFolder}/mesh/target/debug/mesh-fs",
+      "program": "${workspaceFolder}/target/debug/mesh-fs",
       "args": [],
       "env": {},
       "cwd": "${workspaceFolder}"
