--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
+chrono = { version = "0.4", features = ["serde"]}
 clap = "2.33.3"
-chrono = "0.4"
+hashring = "0.2.0"
 log = "0.4"
 md5 = "0.7.0"
 pretty_env_logger = "0.3"
+rand = "0.8.3"
+serde = { version = "1.0", features = ["derive"] }
 sled = "0.34.6"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
